# RAGElo

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  agents_ranking.csv  expert-evaluator.py  pyproject.toml  pyproject_bkp.toml  rubric-test.py
.agents/skills/create-pr-description/: SKILL.md
.agents/skills/review-pr/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  code-quality.yml  python-publish.yml
auto_eval/: __init__.py  __main__.py  cli.py  documents_eval.py  elo_ranker.py  games_creator.py  games_runner.py  logger.py  opeanai_client.py  utils.py
auto_eval/answer_evaluators/: __init__.py  base_answer_evaluator.py  elo_evaluator.py
auto_eval/doc_evaluators/: __init__.py  base_doc_evaluator.py  reasoner.py
docs/examples/data/: eval_results_512_3.csv  eval_results_512_3_reranked.csv  eval_results_512_4.csv  eval_results_512_4_reranked.csv  eval_results_512_5.csv  eval_results_512_5_reranked.csv  rag_response_512_3.csv  rag_response_512_3_reranked.csv  rag_response_512_4.csv  rag_response_512_4_reranked.csv  rag_response_512_5.csv  rag_response_512_5_reranked.csv
docs/examples/notebooks/: chat_eval.ipynb  custom_retrieval_prompt.ipynb  elo_ranking.csv  pairwise_answers_evaluations.csv  rag_eval.ipynb
docs/examples/notebooks/data/: answers.csv  documents.csv  queries.csv
prompts/answers/: elo.txt  pairwise_prompt.txt
prompts/retrieval/: prompt_relevancy.txt
ragelo/: __init__.py  __main__.py  cli.py  logger.py  opeanai_client.py  openai_client.py  presenters.py  utils.py
ragelo/agent_rankers/: __init__.py  base_agent_ranker.py  elo_ranker.py
ragelo/answer_evaluators/: __init__.py  base_answer_evaluator.py  pairwise_reasoning.py
ragelo/answer_rankers/: __init__.py  base_answer_ranker.py  elo_ranker.py
ragelo/cli/: __init__.py  agent_rankers_cmd.py  answer_evaluators_cli.py  answer_evaluators_cmd.py  args.py  cli.py  presenters.py  retrieval_evaluator_cli.py  retrieval_evaluator_cmd.py  utils.py
ragelo/doc_evaluators/: __init__.py  base_doc_evaluator.py  base_retrieval_evaluator.py  domain_expert.py  rdnam_evaluator.py  reasoner_evaluator.py
ragelo/evaluators/: __init__.py  base_evaluator.py  evaluator_utils.py
ragelo/evaluators/answer_evaluators/: __init__.py  base_answer_evaluator.py  base_groundedness_evaluator.py  builtin_criteria.py  chat_pairwise_evaluator.py  custom_pairwise_evaluator.py  custom_prompt_evaluator.py  custom_prompt_pairwise_evaluator.py  domain_expert_evaluator.py  groundedness_evaluator.py  pairwise_evaluator.py  pairwise_reasoning.py  pairwise_reasoning_evaluator.py  rubric_pairwise_evaluator.py  rubric_pointwise_evaluator.py
ragelo/evaluators/groundedness_evaluators/: __init__.py  base_groundedness_evaluator.py
ragelo/evaluators/retrieval_evaluators/: __init__.py  base_retrieval_evaluator.py  custom_prompt_evaluator.py  domain_expert.py  domain_expert_evaluator.py  few_shot_evaluator.py  rdnam_evaluator.py  reasoner_evaluator.py
ragelo/llm_providers/: __init__.py  base_llm_provider.py  instructor_client.py  ollama_client.py  openai_client.py
ragelo/pydantic_v1/: __init__.py  main.py
ragelo/types/: __init__.py  answer_formats.py  configurations.py  console_writer.py  evaluables.py  evaluator_utils.py  experiment.py  formats.py  pydantic_models.py  pydantic_version.py  queries.py  query.py  results.py  storage.py  types.py
ragelo/types/configurations/: __init__.py  agent_ranker_configs.py  answer_evaluator_configs.py  base_configs.py  cli_configs.py  groundedness_evaluator_configs.py  llm_provider_configs.py  retrieval_evaluator_configs.py
ragelo/utils/: openai_client.py  progress_bar.py
rageval/: __init__.py  __main__.py  cli.py  logger.py  opeanai_client.py
rageval/answer_evaluators/: __init__.py  base_answer_evaluator.py  elo_evaluator.py  pairwise_reasoning.py
rageval/answer_rankers/: __init__.py  base_answer_ranker.py  elo_ranker.py
rageval/doc_evaluators/: __init__.py  base_doc_evaluator.py  rdnam_evaluator.py  reasoner.py  reasoner_evaluator.py
rageval/prompts/retrieval/: reasoner.txt
tests/: conftest.py
tests/cli/: cli_test.py  test_cli.py
tests/data/: agents_ranking.csv  answers.csv  answers_eval.jsonl  answers_evaluations.csv  documents.csv  output.csv  output_answers.csv  output_reasoning.csv  pairwise_answers_evaluations.csv  queries.csv  rdnam_descriptions.csv  rdnam_evaluations.csv  rdnam_narratives.csv  rdnam_queries.csv  reasonings.csv
tests/unit/: test_agent_rankers.py  test_answer_evaluators.py  test_evaluator_async.py  test_experiment.py  test_llm_providers.py  test_logger.py  test_openai_client.py  test_presenters.py  test_retrieval_evaluators.py  test_storage.py
