[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "ragelo"
authors = [
    { name = "Zeta Alpha", email = "support@zeta-alpha.com" },
    { name = "Arthur Câmara", email = "camara@zeta-alpha.com" },
]
description = "RAGElo: A Tool for Evaluating Retrieval-Augmented Generation Models"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
dynamic = ["version"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Benchmark",
]
dependencies = [
    "numpy>=1.24.4",
    "openai>=1.10",
    "pydantic>=1.9",
    "tenacity>=9.0.0",
    "typer==0.12.4",
]
[project.scripts]
ragelo = "ragelo.cli:app"

[project.urls]
Homepage = "https://github.com/zetaalphavector/RAGElo"
Repository = "https://github.com/zetaalphavector/RAGElo"


[tool.setuptools.packages.find]
exclude = ["data*"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pydantic>=2.9.1",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.11"
show_column_numbers = true
namespace_packages = true
follow_imports = "silent"
warn_redundant_casts = true
check_untyped_defs = true
implicit_reexport = true
exclude = ["build/", "dist/", "venv/"]


[tool.setuptools-git-versioning]
enabled = true
